--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
 body {
     font-family: 'Arno Pro';
-    width: 50%;
-    margin: 5% 10%;
-    background: #faf9ef;
+    margin: 1% 10%;
     color: #111;
-    counter-reset: section;
 }
 
 p {
@@ -13,21 +10,11 @@ p {
     width: 50ch;
 }
 
-/* Paragraph numbering */
-p:not(.jax)::before {
-    counter-increment: section;
-    content: counter(section);
-    font-size: 0.8em;
-    line-height: 1.3em;
-    color: rgba(20, 20, 20, 0.2);
-    white-space: nowrap;
-    clear: right;
-    float: right;
-    margin-right: -10%;
+h1 {
+    margin-top: 5%;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Adobe Caslon Pro';
     font-weight: 600;
     margin-top: 1.5em;
 }
@@ -44,4 +31,29 @@ a:hover {
 .name {
     font-variant: small-caps;
     text-transform: lowercase;
+}
+
+/* "fr" = footnote reference */
+.fr {
+    font-size: 70%;
+    vertical-align: super;
+}
+
+.fr:hover {
+    background: rgba(0, 0, 0, 0.1);
+    text-decoration: none;
+}
+
+#content {
+    width: 50%;
+    float: left;
+    clear: left;
+}
+
+#footnotes {
+    width: 30%;
+    float: right;
+    clear: right;
+    margin-top: 5%;
+    border-left: 1px solid #aaa;
 }
